--- a/index.html
+++ b/index.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Image Gallery</title>
-   <link rel="stylesheet" href="style.css">
-</head>
-<>
-   <div class="container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Image Gallery</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
       <div class="heading">
-         <h3>Photo <span>Gallery</span></h3>   
-   </div>
-   
-   
-  
-   <div class="box1-container">
-      <img src="images/antigua.jpg" alt="antiqua">
-   </div>
-   
-   <div class="box2-container">
-      <img src="images/chickenbus.jpg" alt="chicken bus">
-   </div>
-   
-   <div class="box3-container">
-      <img src="images/dinero.jpg" alt="dinero">
-   </div>
-   
-   <div class="box4-container">
-      <img src="images/tikal.jpg" alt="tikal 2">
-   </div>
-   
-   <div class="box5-container">
-      <img src="images/tikal2.jpg" alt="tikal 2">
-   </div>
-         
+        <h3>Photo <span>Gallery</span></h3>
       </div>
-</body>
+
+      <div class="box1-container">
+        <img src="images/antigua.jpg" alt="antiqua" />
+      </div>
+
+      <div class="box2-container">
+        <img src="images/chickenbus.jpg" alt="chicken bus" />
+      </div>
+
+      <div class="box3-container">
+        <img src="images/dinero.jpg" alt="dinero" />
+      </div>
+
+      <div class="box4-container">
+        <img src="images/tikal.jpg" alt="tikal 2" />
+      </div>
+
+      <div class="box5-container">
+        <img src="images/tikal2.jpg" alt="tikal 2" />
+      </div>
+    </div>
+  </body>
 </html>
